[project]
name = "wooflovers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "fastapi[standard]>=0.114.2",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pydantic-settings>=2.5.2",
    "sentry-sdk>=2.14.0",
]
